# ROS2_Autonomous_Navigation_Robot_Project

./: .gitignore  README.md
Assets (For README)/: LOL flowchart LR.mmd  ROS2graph Packages.mmd  ROS2graph.mmd
autorobot_interfaces/: CMakeLists.txt
autorobot_interfaces/msg/: Pose2DStamped.msg  WheelTicks.msg
autorobot_interfaces/srv/: SetPose.srv
diffrobot_pkg/: setup.cfg
lidarbot_interfaces/: package.xml
lidarbot_pkg/: package.xml  setup.cfg  setup.py
lidarbot_pkg/diffrobot_pkg/: encoder_node.py  kinematics_node.py  robot_parameters.py
lidarbot_pkg/launch/: diffrobot_launch.py
lidarbot_pkg/lidarbot_pkg/: encoder_node.py  reset_client.py
lidarrobot_interfaces/: package.xml
